# CryptoTests

./: Authorization.cpp  CryptoTestEasy.cpp  Header.h  Levels.cpp  RunApplication.cpp  TaskGenerator.cpp  TaskGenerator.h  main.cpp
CryptoTests/: CMakeLists.txt
CryptoTests/CryptoTests/: BotConfig.java  CMakeLists.txt  CppBridge.java  Main.java  Storage.java  TaskGenerator.cpp  TaskGenerator.h  pom.xml
CryptoTestsCpp/: main.cpp
TelegramBot/: CryptoBot.java  User.java  pom.xml
TelegramBot/src/main/java/com/crypto/bot/: BotConfig.java  CppBridge.java  CryptoBot.java  Main.java  Storage.java  User.java
